--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ width: 293px;
         width: 100vw;
     }
     .bar-stories{
-        width: 100%;
+        width: 100vw;
     }
     .bar-stories ion-icon{
         display: none;
